# tdd-biblioteca-digital

./: .dockerignore  DOCKER_SETUP.md  Dockerfile  README.md  biblioteca.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: biblioteca.py  biblioteca_db.py  livro.py  models.py  usuario.py
tests/: test_biblioteca.py  test_integration.py  test_livro.py  test_usuario.py
